--- a/menu.html
+++ b/menu.html
@@ -125,7 +125,7 @@
              <li><a href="about_us.html">ABOUT US</a></li>
              <li><a>MENUS</a></li>
              <li><a>NEWS</a></li>
-             <li><a>REACH US</a></li>
+             <li><a href="ContactUs.html">REACH US</a></li>
              <li><img class="icon" src="facebook.jpg"> <img class="icon" src="twitter.png"> <img class="icon" src="insta.png"></li>
              <li><a style="color:rgb(228,88,44);">NEW DELHI</a></li>
              <li><a>NEW YORK</a></li>
