--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
              <li><a style="color:rgb(228,88,44);">NEW DELHI</a></li>
              <li><a>NEW YORK</a></li>
              <li><a>LONDON</a></li>
-             <li><a>ON LOCATION</a></li>
+             <li><a href="private_hire.html">PRIVATE HIRE</a></li>
         </ul>
         <div class="last">
         	<ul type="none" class="same2">
