--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div id="navbar">
   <a href="reservations.html"><span id="nav"> RESERVATIONS </span></a>
  
-  <a href="ssaurav07.github.io/menu"><span id="nav"> MENUS </span></a>
+  <a href="https://ssaurav07.github.io/menu"><span id="nav"> MENUS </span></a>
          <img id="b" src="m_logo.png">
                 </div>
         <script>
