--- a/ContactUs.html
+++ b/ContactUs.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Contact Us | Indian Accent Restaurant New Delhi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             #link:hover{
                 color:rgb(235,89,33);
