--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head><title>Gallery || Indian Accent Restaurant || New Delhi </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/gif" href="topicon.png">
     
     <style>
