--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Food & Beverage Menu |Indian Accent Restaurant New Delhi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
     #navbar {
         background-color: white;
