--- a/menu2.html
+++ b/menu2.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Lunch & Dinner Menu - Indian Accent New Delhi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             #para{
                 font-family: cursive;text-align: center;opacity: 0.6;margin-top: 100px;letter-spacing: 2px;
