--- a/signup_form.html
+++ b/signup_form.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>JS Assignment 3_1(a)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://media.coschedule.com/uploads/cos-logo-icon-orgwht-800x800.png">
 <style>
 body{
