--- a/menu1.html
+++ b/menu1.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>3 Course Menu-Indian Accent</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             #navbar {
                 background-color: white;
