--- a/menu3.html
+++ b/menu3.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Chef's Tasting Menu | Indian Accent</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         #navbar {
             background-color: white;
