--- a/menu5.html
+++ b/menu5.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Lunch & Dinner Menu - Indian Accent New Delhi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             #navbar {
                 background-color: white;
