--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	    	<link rel="icon" type="image/gif" href="topicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<style>
     		*{
     			margin: 0px;
