--- a/private_hire.html
+++ b/private_hire.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Catering Services | Indian Accent Restaurant New Delhi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         #navbar {
             background-color: white;
