--- a/spice.html
+++ b/spice.html
@@ -42,7 +42,7 @@
             }
             
             
-            @media (min-width:981px)
+            @media (max-width:550px)
             {
              nav ul{
                     flex-direction: column;
