--- a/spice.html
+++ b/spice.html
@@ -3,6 +3,8 @@
         <title>Home || Subham Grih Udyog || Darbhanga</title>
         <link rel="icon" href="https://i.pinimg.com/originals/87/2c/05/872c05f980f3e2cf97b6ac2242447477.jpg">
         
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <style>
             body{
                 margin: 0;
