--- a/spice.html
+++ b/spice.html
@@ -174,12 +174,12 @@
         <div id="container4">
             <nav>
                 <ul id="ul2">
-                    <li><a href="" class="afooter">COPYRIGHT 2020</a></li>
-                    <li><a href="" class="afooter">PRIVACY POLICY</a></li>
-                    <li><a href="" class="afooter">TERMS & CONDITIONS</a></li>
-                    <li><a href="" class="afooter">COOKIE CONSTANT</a></li>
-                    <li><a href="" class="afooter">CALL US</a></li>
-                    <li><a href="" class="afooter">MAIL US</a></li>
+                    <li><a href="#self" class="afooter">COPYRIGHT 2020</a></li>
+                    <li><a href="#self" class="afooter">PRIVACY POLICY</a></li>
+                    <li><a href="#self" class="afooter">TERMS & CONDITIONS</a></li>
+                    <li><a href="#self" class="afooter">COOKIE CONSTANT</a></li>
+                    <li><a href="telto:7667985198" class="afooter" >CALL US</a></li>
+                    <li><a href="mailto:sumanmepl02@gmail.com" class="afooter">MAIL US</a></li>
                 </ul>
             </nav>
         </div>
