--- a/Color_Guess_game.html
+++ b/Color_Guess_game.html
@@ -34,9 +34,9 @@
         
             <div class="row_container">
                 <div class="row1">
-                    <div class="column" style="background-color:aquamarine"></div>
-                    <div class="column" style="background-color:yellowgreen"></div>
-                    <div class="column" style="background-color:coral"></div>
+                    <div class="column" ></div>
+                    <div class="column" ></div>
+                    <div class="column" ></div>
                 </div>
                 
                 <div class="row2">
