--- a/photog.html
+++ b/photog.html
@@ -68,13 +68,13 @@
         
  <!-- Gallery_Grid -->
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-12 col-sm-4 col-lg-3 col-md-6" >
                 <img src="photog1.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
             </div>
             
             <div class="col-12 col-sm-4 col-lg-6 col-md-6" >
-                <div class="row" style="padding-top: 1em">
+                <div class="row" style="padding-top: 1em align-items-center">
                     <div class="col col-sm-12 col-lg-6 col-md-12" >       
                         <img src="photog2.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
                     </div>
@@ -99,7 +99,7 @@
                 <img src="photog5.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
             </div>
             <div class="col-12 col-sm-4 col-lg-6 col-md-6" >
-                <div class="row" style="padding-top: 1em">
+                <div class="row" style="padding-top: 1em align-items-center">
                     <div class="col=1 col-lg-6 col-md-12" >       
                         <img src="photog9.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
                     </div>
