--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             
     <div class="row align-items-center">
     <div class=" col col-lg">
-      <img src="color_guess_game_IMG.PNG" alt="Color Guess Game Image" class="img-thumbnail">
-        <span class="gallery_span">PHOTOGRAPHY PAGE</span>
+      <img src="todolistIMG.PNG" alt="To Do List Image" class="img-thumbnail">
+        <span class="gallery_span">To Do List</span>
     </div>
     <div class=" col col-lg">
       
