--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             My WORK 
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#" target="_blank"><span id="yes"><i class="far fa-clone fas-dropdown"></i></span>Patatap Clone</a>
+                <a class="dropdown-item" href="patatap_clone.html" target="_blank"><span id="yes"><i class="far fa-clone fas-dropdown"></i></span>Patatap Clone</a>
               <a class="dropdown-item" href="Color_Guess_game.html" target="_blank"><i class="fas fa-gamepad fas-dropdown"></i>COLOR GUESS GAME</a>
               <a class="dropdown-item" href="ToDoList.html" target="_blank"><i class="fas fa-pencil-alt fas-dropdown"></i>To DO List </a>
               <a class="dropdown-item" href="photog.html" target="_blank"><i class="fas fa-camera fas-dropdown"></i>PhotuG</a>
