--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="container">
           <div class="row align-items-center">
             <div class=" col= col-sm-6 col-md-4">
-              <img src="PhotuGImg.PNG" alt="PhotuG Image" class="img-thumbnail">
-                <span class="gallery_span">PHOTOGRAPHY PAGE</span>
+              <img src="patatapIMG.PNG" alt="Patatap Image" class="img-thumbnail">
+                <span class="gallery_span">PLAY WITH KEYS</span>
             </div>
             <div class=" col= col-sm-6 col-md-4">
               <img src="color_guess_game_IMG.PNG" alt="Color Guess Game Image" class="img-thumbnail">
@@ -86,14 +86,15 @@
               <img src="todolistIMG.PNG" alt="To Do List Image" class="img-thumbnail">
                 <span class="gallery_span">To Do List</span>
             </div>
+              
+              <div class="col= col-sm-6 col-md-4">
+              <img src="PhotuGImg.PNG" alt="Photography Image" class="img-thumbnail">
+                <span class="gallery_span">PHOTOGRAPHY PAGE</span>
+            </div>
+              
             <div class=" col= col-sm-6 col-md-4">
-
               <img src="Gallery_IMG.PNG" alt="Restaurant Image" class="img-thumbnail">
                 <span class="gallery_span">RESTAURANT || INDIAN ACCENT</span>
-            </div>
-            <div class="col= col-sm-6 col-md-4">
-              <img src="spice_IMG.PNG" alt="SPICE Image" class="img-thumbnail">
-                <span class="gallery_span">SUBHAM GRIH UDYOG</span>
             </div>
             </div>
         </div>
