--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <!--JumboTron-->
             <div class="jumbotron jumbotron-fluid">
       <h1 class="display-4"><i class="far fa-smile"></i> Welcome Visitors !</h1>
-      <p class="lead"> Right now you're looking at the unofficial page of Photography Club , NIT Kurukshetra.<br>The page has been created by Mr. Suman Saurav  for calling extra attention to featured content or information.</p>
+      <p class="lead">This page has been developed by Mr Suman Saurav in order <br> to keep his works ordered at one place and for calling extra attention to his work! <br>
+                You can explore through his works in MyWork Section on the top or scroll down for the content </p>
       <hr class="my-4">
       <p>This page has been developed using Bootstrap and all the enthusiasm...
       <a class="btn btn-primary btn-sm" href="#" role="button">Read more</a>
