spice personal data removed

--- a/spice.html
+++ b/spice.html
@@ -265,7 +265,7 @@
         <a id="insta" href="https://www.instagram.com/s.square143/?hl=en"><i class="fab fa-instagram-square"></i></a>
             <a id="fb" href="https://www.facebook.com/ImSumanSaurav/"><i class="fab fa-facebook"></i></a>
             <a id="whatsapp" href="https://wa.me/917667985198/?text=Hi Saurav, Whatsup"><i class="fab fa-whatsapp-square"></i></a>
-            <a id="utube" href="https://www.youtube.com/channel/UCu9RM-mwB33MCABKP4-aMRw"><i class="fab fa-youtube"></i></a>
+            <a id="utube" href="https://www.youtube.com/channel/"><i class="fab fa-youtube"></i></a>
             </span>
         </div>
         
