--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control mr-sm-2 btn-outline-warning" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
@@ -57,7 +57,7 @@
         
 <!--JumboTron-->
             <div class="jumbotron jumbotron-fluid">
-      <h1 class="display-4"><i class="far fa-smile"></i> Welcome Visitors !</h1>
+      <h1 class="display-4"> Welcome Visitors !</h1>
       <p class="lead">This page has been developed by Mr Suman Saurav in order <br> to keep his works ordered at one place and for calling extra attention to his work! <br>
                 You can explore through his works in MyWork Section on the top or scroll down for the content </p>
       <hr class="my-4">
