blog site added and made complete for launch

--- a/Gallery.html
+++ b/Gallery.html
@@ -253,6 +253,7 @@
              <li><input style="background-color: rgba(60,60,60,0.1);width: 210px; height:30px;padding: 5px;" placeholder="SUBSCRIBE TO STAY UPDATED"> <button style="background-color:rgb(228,88,44); color: white; width: 150px; height:42px;padding: 5px; border: 0px solid orange;">Subscribe</button></li>
         </ul></div>
         <script>
+			window.alert("Note: This site was developed in the early phases of learning! So it won't be very responsive and hence may not be compatible with your device. Although we've worked really hard on this project. By we i mean me and my dear friend Prahlad Kumar.")
             var slideIndex=1;
             showSlides(slideIndex);
             
