--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="jumbotron jumbotron-fluid">
       <h1 class="display-4"> Welcome Visitors !</h1>
       <p class="lead">This page has been developed by Mr Suman Saurav in order <br> to keep his works ordered at one place and for calling extra attention to his work! <br>
-                You can explore through his works in MyWork Section on the top or scroll down for the content </p>
+                You can explore through his works in MyWork Section on the top or scroll down for the content. Happy Scrolling ! </p>
       <hr class="my-4">
       <p>This page has been developed using Bootstrap and all the enthusiasm...
       <a class="btn btn-primary btn-sm" href="Page_not_found.html" role="button">Read more</a>
