--- a/campus.html
+++ b/campus.html
@@ -64,7 +64,9 @@
             <div class="col= col-sm-6 col-md-4" style="padding: 5">
                 <img src="way%20to%20OAT.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
             </div>
-			
+			<div class="col= col-sm-6 col-md-4" style="padding: 5">
+                <img src="campus2.PNG" class="img-fluid img-thumbnail" alt="Responsive image">
+            </div>
 			<div class="col= col-sm-6 col-md-4" style="padding: 5">
                 <img src="campus3.PNG" class="img-fluid img-thumbnail" alt="Responsive image">
             </div>
@@ -88,9 +90,6 @@
             </div>
 			<div class="col= col-sm-6 col-md-4" style="padding: 5">
                 <img src="campus1.PNG" class="img-fluid img-thumbnail" alt="Responsive image">
-            </div>
-			<div class="col= col-sm-6 col-md-4" style="padding: 5">
-                <img src="campus0.png" class="img-fluid img-thumbnail" alt="Responsive image">
             </div>
             
            
