--- a/form.html
+++ b/form.html
@@ -1,52 +1,30 @@
-<html DOTYPE!!!!>
-<html>
-<title> FORM</title>
+<!DOCTYPE html>
+<html>	
 <head>
+<title>LOGIN FORM</title>
+	<style>
+		input [type=tex]{
+			width: 100%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			text-align: 
+		}
+			
+		
 	
-
 	
-<body>
-	name <input><br>
-	
-date of birth <input>
-	
-	
-	</body>	
-	
-	
-	
-	</head>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	</style>
+	<body>
+		<h1>Login Form</h1><br>
+		<form><label>Username</label>
+		<input type="text"><br>
+		<label>Password</label>
+		<input type="text"><br>
+		<input type="checkbox";
+			   
+			   </form>
+			</body>
+			
+			</head>
 
 </html>
