--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2 btn-outline-red" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" onclick="alert('Pardon! This function is still in development phase.')">Search</button>
+          <button class="btn btn-outline-warning my-2 my-sm-0" type="submit" onclick="alert('Sorry! No data matching with your input found.')">Search</button>
         </form>
       </div>
 </nav>
