--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				
                 
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="Page_not_found.html"><i class="fas fa-hammer fas-dropdown"></i>Under Development</a>
+              <a class="dropdown-item" href="https://docs.google.com/document/d/1Jc17rJ-8I3-X8Cn9Mb5JPOx_lyltuX23IqZbplStGt4/edit?usp=sharing"><i class="fas fa-hammer fas-dropdown"></i>My Resume</a>
             </div>
           </li>
         </ul>
